tests/baselines/reference/classExpressionTest1.errors.txt
tests/cases/compiler/classExpressionTest1.ts(2,11): error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.


==== tests/cases/compiler/classExpressionTest1.ts (1 errors) ====
    function M() {
        class C<X> {
              ~
!!! error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.
            f<T>() {
                var t: T;
                var x: X;
                return { t, x };
            }
        }
    
        var v = new C<number>();
        return v.f<string>();
    }